<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/edit_info_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/weight_hint"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workTimeTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/workout_hint"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wakeUpTimeTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workTimeTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/wakeup_hint"
            android:inputType="numberSigned"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sleepTimeTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeUpTimeTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/sleeping_hint"
            android:inputType="numberSigned"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/targetTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepTimeTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/custom_intake_hint"
            android:inputType="numberSigned"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/notification_settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/notification_settings_header"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetTextField"
        tools:text="@string/notification_settings_header" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notificationTextTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_settings_header">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/notification_message_hint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ringtoneTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationTextTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/notification_tone_hint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/notification_time_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringtoneTextField"
        android:text="@string/notification_hint" />
    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/notificationIntervalRadioBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_time_header"
        app:rrbg_animateDrawables_enter="overshoot"
        app:rrbg_animateTexts_enter="overshoot"
        app:rrbg_dividerColor="@color/colorBlack"
        app:rrbg_dividerSize="1dp"
        app:rrbg_radius="6dp"
        app:rrbg_selectorColor="#4D03A9F4"
        app:rrbg_selectorSize="6dp">

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/ic_30_minutes"
            app:rrb_drawableGravity="left"
            app:rrb_drawableHeight="38dp"
            app:rrb_drawablePadding="8dp"
            app:rrb_drawableWidth="30dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/colorBlack"
            app:rrb_text="30 Mins"
            app:rrb_textColor="@color/colorBlack" />

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/ic_45_minutes"
            app:rrb_drawableGravity="left"
            app:rrb_drawableHeight="30dp"
            app:rrb_drawablePadding="8dp"
            app:rrb_drawableWidth="30dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/colorBlack"
            app:rrb_text="45 Mins"
            app:rrb_textColor="@color/colorBlack" />

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/ic_60_minutes"
            app:rrb_drawableGravity="left"
            app:rrb_drawableHeight="30dp"
            app:rrb_drawablePadding="8dp"
            app:rrb_drawableWidth="30dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/colorBlack"
            app:rrb_text="60 Mins"
            app:rrb_textColor="@color/colorBlack" />
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>

    <Button
        android:id="@+id/updateDataBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/welcome_button_bg"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
