<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/init_user_info_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".UserInfoRegisterActivity">


    <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_info_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workTimeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_hint"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wakeUpTimeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workTimeTextField">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/wakeup_hint"
        android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sleepTimeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wakeUpTimeTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/sleeping_hint"
            android:inputType="numberSigned"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--            android:id="@+id/weightTextField"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="50dp"-->
    <!--            android:layout_marginHorizontal="16dp"-->
    <!--            android:layout_marginVertical="24dp"-->
    <!--            android:background="@drawable/editext_bg"-->
    <!--            android:hint="@string/weight_hint"-->
    <!--            android:inputType="numberSigned"-->
    <!--            android:maxLength="3"-->
    <!--            android:padding="8dp"-->
    <!--            android:textColor="@color/colorBlack"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <EditText-->
<!--            android:id="@+id/workTimeTextField"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_margin="16dp"-->
<!--            android:background="@drawable/editext_bg"-->
<!--            android:hint="@string/workout_hint"-->
<!--            android:inputType="numberSigned"-->
<!--            android:maxLength="3"-->
<!--            android:padding="8dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/weightTextField" />-->


<!--    <EditText-->
<!--            android:id="@+id/wakeUpTimeTextField"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_margin="16dp"-->
<!--            android:background="@drawable/editext_bg"-->
<!--            android:clickable="true"-->
<!--            android:focusable="false"-->
<!--            android:hint="@string/wakeup_hint"-->
<!--            android:inputType="numberSigned"-->
<!--            android:padding="8dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/workTimeTextField" />-->

<!--    <EditText-->
<!--            android:id="@+id/sleepTimeTextField"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:background="@drawable/editext_bg"-->
<!--            android:clickable="true"-->
<!--            android:focusable="false"-->
<!--            android:hint="@string/sleeping_hint"-->
<!--            android:inputType="numberSigned"-->
<!--            android:padding="8dp"-->
<!--            android:layout_margin="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/wakeUpTimeTextField" />-->


    <Button
            android:id="@+id/letsStartBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/welcome_button_bg"
            android:text="@string/continue_"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>